[package]
name = "solana_pump_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
log4rs = "1.0"
colored = "2.0"
solana-client = "1.14"
solana-sdk = "1.14"
solana-transaction-status = "1.14"
chrono = "0.4"
dirs = "5.0"
env_logger = "0.10" 
