[package]
name = "solana-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["json", "socks", "native-tls"] }
log = "0.4"
log4rs = { version = "1.3", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
dirs = "5.0"
lru = "0.12"
futures = "0.3"
dashmap = "5.5"
thiserror = "1.0"
atomic_float = "0.1"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true 
